<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_calculator"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/sleepInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sleep_hours"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/waterInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/glasses_of_water"
        android:inputType="number"
        android:autofillHints=""
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/stressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stress_level"
        android:inputType="number"
        android:autofillHints=""
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_mood"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#4CAF50"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/infoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:layout_marginTop="20dp" />

</LinearLayout>